--- a/SampleGigatmsSDK/UHFSample/Base.lproj/Main.storyboard
+++ b/SampleGigatmsSDK/UHFSample/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                         </items>
                                     </navigationBar>
                                     <containerView opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ycu-JO-Qtw">
-                                        <rect key="frame" x="0.0" y="58.5" width="310" height="150"/>
+                                        <rect key="frame" x="0.0" y="58.5" width="310" height="195"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="150" id="mtE-7c-H2a"/>
                                         </constraints>
@@ -38,7 +38,7 @@
                                         </connections>
                                     </containerView>
                                     <button opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zdw-jo-9WI">
-                                        <rect key="frame" x="0.0" y="223.5" width="310" height="30"/>
+                                        <rect key="frame" x="0.0" y="268.5" width="310" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="404" id="bEl-Tc-AR3"/>
                                             <constraint firstAttribute="height" constant="30" id="g7y-qi-Tx8"/>
@@ -49,7 +49,7 @@
                                         </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qgv-j6-New">
-                                        <rect key="frame" x="0.0" y="261" width="310" height="30"/>
+                                        <rect key="frame" x="0.0" y="306" width="310" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="UrI-hH-5zz"/>
                                         </constraints>
@@ -58,8 +58,8 @@
                                             <action selector="actGetBLEVer:" destination="9pv-A4-QxB" eventType="touchUpInside" id="n9L-QC-SPw"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9cq-Z8-2B9">
-                                        <rect key="frame" x="0.0" y="268.5" width="310" height="30"/>
+                                    <button hidden="YES" opaque="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9cq-Z8-2B9">
+                                        <rect key="frame" x="0.0" y="306" width="310" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="89N-hC-emZ"/>
                                             <constraint firstAttribute="width" constant="404" id="C3K-2M-KaA"/>
@@ -226,7 +226,7 @@
                                         </items>
                                     </navigationBar>
                                     <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="00W-4R-fFN">
-                                        <rect key="frame" x="0.0" y="48.5" width="310" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="48.5" width="310" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="150" id="YwN-F0-fjo"/>
                                         </constraints>
@@ -235,16 +235,16 @@
                                         </connections>
                                     </containerView>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ko5-Dh-SJv">
-                                        <rect key="frame" x="0.0" y="53.5" width="310" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="103.5" width="310" height="20"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Access Password:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7cB-Ei-33C">
-                                                <rect key="frame" x="0.0" y="0.0" width="75" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="75" height="20"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="00000000 is default password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rgo-r7-Efj">
-                                                <rect key="frame" x="75" y="0.0" width="235" height="20.5"/>
+                                                <rect key="frame" x="75" y="0.0" width="235" height="20"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="1" green="0.35323030179999998" blue="0.16111762590000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -252,12 +252,12 @@
                                         </subviews>
                                     </stackView>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="00000000" borderStyle="roundedRect" placeholder="00000000" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1QT-nW-5xp">
-                                        <rect key="frame" x="0.0" y="79" width="310" height="34"/>
+                                        <rect key="frame" x="0.0" y="128.5" width="310" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lWG-Ay-BFP">
-                                        <rect key="frame" x="0.0" y="118" width="310" height="20"/>
+                                        <rect key="frame" x="0.0" y="167.5" width="310" height="20"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="EPC(HexString):" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iqd-U7-4xl">
                                                 <rect key="frame" x="0.0" y="0.0" width="66" height="20"/>
@@ -274,22 +274,22 @@
                                         </subviews>
                                     </stackView>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="EPC" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Hk-v0-1hg">
-                                        <rect key="frame" x="0.0" y="143" width="310" height="34"/>
+                                        <rect key="frame" x="0.0" y="192.5" width="310" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="9D1-Qq-6UL">
-                                        <rect key="frame" x="0.0" y="182" width="310" height="79"/>
+                                        <rect key="frame" x="0.0" y="231.5" width="310" height="29.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WkJ-XS-ziL">
-                                                <rect key="frame" x="0.0" y="0.0" width="150" height="79"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="150" height="29.5"/>
                                                 <state key="normal" title="Read EPC"/>
                                                 <connections>
                                                     <action selector="actReadEPC:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="8CW-T2-gq9"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="koo-hs-QIX">
-                                                <rect key="frame" x="160" y="0.0" width="150" height="79"/>
+                                                <rect key="frame" x="160" y="0.0" width="150" height="29.5"/>
                                                 <state key="normal" title="Write EPC"/>
                                                 <connections>
                                                     <action selector="actWriteEPC:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="3u0-DP-z7E"/>
@@ -441,7 +441,7 @@
                                                             </button>
                                                         </subviews>
                                                     </stackView>
-                                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="3" minValue="1" maxValue="14" translatesAutoresizingMaskIntoConstraints="NO" id="81w-LB-cB5">
+                                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="14" minValue="1" maxValue="14" translatesAutoresizingMaskIntoConstraints="NO" id="81w-LB-cB5">
                                                         <rect key="frame" x="-2" y="40" width="304" height="31"/>
                                                     </slider>
                                                 </subviews>
